[workspace]
members = [ "eipw-preamble", "eipw-lint", "eipw-lint-js", "eipw-snippets" ]

[package]
name = "eipw"
description = "Ethereum Improvement Proposal linter that's one more than eipv"
version = "0.9.0"
edition = "2021"
license = "MPL-2.0"
rust-version = "1.80"
repository = "https://github.com/ethereum/eipw"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eipw-snippets = { path = "eipw-snippets", version = "0.1.0" }
tokio = { version = "1.40.0", features = [ "macros" ] }
clap = { version = "4.5.18", features = [ "derive" ] }
eipw-lint = { version = "0.9.0", path = "eipw-lint", features = [ "tokio" ] }
serde_json = "1.0.99"
thiserror = "1.0.64"
toml = "0.8.19"
serde = { version = "1.0.164", features = [ "derive" ] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio = { version = "1.40.0", features = [ "macros", "rt" ] }
getrandom = { version = "0.2.15", features = [ "js" ] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.40.0", features = [ "fs", "macros", "rt-multi-thread" ] }
