[package]
name = "eipw-lint-js"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

description = "Node.js bindings for eipw, the Ethereum Improvement Proposal validator"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["console_error_panic_hook"]

[dependencies]
eipw-snippets.workspace = true
eipw-lint.workspace = true
serde_json.workspace = true
serde = { workspace = true, features = [ "derive" ] }
getrandom = { workspace = true, features = [ "js" ] }

wasm-bindgen = { version = "0.2.93", features = [ "serde-serialize" ] }
serde-wasm-bindgen = "0.6.5"
wasm-bindgen-futures = "0.4.43"
console_error_panic_hook = { version = "0.1.7", optional = true }
js-sys = "0.3.70"

[dev-dependencies]
wasm-bindgen-test = "0.3.43"
