[package]
name = "eipw-lint-js"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

description = "Node.js bindings for eipw, the Ethereum Improvement Proposal validator"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["console_error_panic_hook"]

[dependencies]
eipw-snippets.workspace = true
eipw-lint.workspace = true
serde_json.workspace = true
serde = { workspace = true, features = [ "derive" ] }
getrandom = { workspace = true, features = [ "js" ] }

wasm-bindgen = { workspace = true, features = ["serde-serialize"] }
serde-wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
console_error_panic_hook = { workspace = true, optional = true }
js-sys = { workspace = true }

[dev-dependencies]
pretty_assertions.workspace = true
wasm-bindgen-test = { workspace = true }
