[package]
name = "eipw-lint"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "library of lints for eipw, the Ethereum Improvement Proposal validator"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eipw-preamble.workspace = true
eipw-snippets.workspace = true
serde_json.workspace = true
snafu.workspace = true
regex.workspace = true
serde = { workspace = true, features = [ "derive" ] }
tokio = { optional = true, workspace = true, features = [ "macros" ] }

comrak = { workspace = true }
url = { workspace = true }
chrono = { workspace = true }
educe = { workspace = true, features = ["Debug"] }
scraper = { workspace = true }
jsonschema = { workspace = true }
formatx = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { workspace = true, features = [ "fs", "macros" ] }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tokio = { workspace = true, features = [ "fs", "macros", "rt" ] }

[dev-dependencies]
assert_matches.workspace = true
pretty_assertions.workspace = true
tokio = { workspace = true, features = [ "macros", "rt" ] }
toml.workspace = true
