[package]
name = "eipw-preamble"
version = "0.3.0-dev"
edition = "2021"
license = "MPL-2.0"
rust-version = "1.80"
repository = "https://github.com/ethereum/eipw"
description = "preamble parser for eipw, the Ethereum Improvement Proposal validator"

[dependencies]
eipw-snippets = { path = "../eipw-snippets", version = "0.2.0-dev" }
regex = "1.11.0"
snafu = "0.8.5"

[dev-dependencies]
assert_matches = "1.5.0"
