[package]
name = "eipw-preamble"
version = "0.3.0-dev"
edition = "2021"
license = "MPL-2.0"
rust-version = "1.80"
repository = "https://github.com/ethereum/eipw"
description = "preamble parser for eipw, the Ethereum Improvement Proposal validator"

[dependencies]
eipw-snippets.workspace = true
regex.workspace = true
snafu.workspace = true

[dev-dependencies]
assert_matches.workspace = true
