[package]
name = "eipw-preamble"
version = "0.3.0-dev"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "preamble parser for eipw, the Ethereum Improvement Proposal validator"

[dependencies]
eipw-snippets.workspace = true
regex.workspace = true
snafu.workspace = true

[dev-dependencies]
assert_matches.workspace = true
