[package]
name = "eipw-snippets"
description = "(Hopefully) thin wrapper around annotate-snippets "
version = "0.2.0-dev"
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.80"
repository = "https://github.com/ethereum/eipw"

[dependencies]
annotate-snippets = "0.11.4"
serde = { version = "1", features = [ "derive" ] }

[dev-dependencies]
serde_json = "1.0.128"
