[package]
name = "eipw-snippets"
description = "(Hopefully) thin wrapper around annotate-snippets "
version = "0.2.0-dev"
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.80"
repository = "https://github.com/ethereum/eipw"

[dependencies]
serde = { workspace = true, features = [ "derive" ] }

annotate-snippets = "0.11.4"

[dev-dependencies]
serde_json.workspace = true
