[package]
name = "eipw-snippets"
description = "(Hopefully) thin wrapper around annotate-snippets "
version = "0.3.0-dev"
license = "MIT OR Apache-2.0"
edition.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true, features = [ "derive" ] }

annotate-snippets = "0.11.5"

[dev-dependencies]
serde_json.workspace = true
